yyamamoto+sesetup@salesforce.com/src/objects/CustomObject4__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>通信費</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>宿泊料</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>保管金</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TASKID__c</fullName>
        <label>TASKID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>タイムシート</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Field39__c</columns>
        <columns>Field54__c</columns>
        <columns>Field55__c</columns>
        <columns>Field40__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>Field56__c</columns>
        <columns>Field44__c</columns>
        <columns>Field45__c</columns>
        <filterScope>Everything</filterScope>
        <label>担当作業状況（すべて）</label>
    </listViews>
    <listViews>
        <fullName>OwnerTaskView</fullName>
        <columns>NAME</columns>
        <columns>Field39__c</columns>
        <columns>Field54__c</columns>
        <columns>Field55__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>Field46__c</columns>
        <columns>Field44__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field54__c</field>
            <operation>notEqual</operation>
            <value>完了</value>
        </filters>
        <label>担当作業状況（未完了）</label>
    </listViews>
    <listViews>
        <fullName>OwnerTaskView2</fullName>
        <columns>NAME</columns>
        <columns>Field39__c</columns>
        <columns>Field54__c</columns>
        <columns>Field55__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>Field46__c</columns>
        <columns>Field44__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field54__c</field>
            <operation>equals</operation>
            <value>完了</value>
        </filters>
        <label>担当作業状況（完了した活動）</label>
    </listViews>
    <nameField>
        <displayFormat>T{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>活動番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>